# pre_allinone

./: manage.py  pyproject.toml
base/: admin.py  models.py  permissions.py  serializers.py  service.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_article_dislikes_article_likes.py  0003_comment.py  0004_remove_comment_active_comment_is_active.py  0005_comment_user.py  0006_comment_parent_comment.py  0007_article_is_draft.py  0008_alter_article_is_draft.py  0009_topic_article_topic.py
pre_allinone/: asgi.py  settings.py  urls.py  wsgi.py
user/migrations/: 0001_initial.py
